--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Welcome To</h1>
         <h1> <span class="name-highlight">Mostofa Kamal</span>  Website</h1>
          <h3>professional web developer</h3>
-         <p>I am student of Computer scince and engineering. web developing is my hoby. designing is also may hoby.Web development is the building and maintenance of websites; it's the work that happens behind the scenes to make a website look great, work fast and perform well with a seamless user experience.Web developers, or 'devs', do this by using a variety of coding languages.</p>
+         <p>Web development is the building and maintenance of websites; it's the work that happens behind the scenes to make a website look great, work fast and perform well with a seamless user experience.Web developers, or 'devs', do this by using a variety of coding languages.</p>
           <a class="me-btn" target="_blank" href="https://www.linkedin.com/in/md-mostofa-0022211ab/">Here me</a>
     
        </div>
@@ -24,6 +24,9 @@
           <img src="img/pro1.png" alt="">
        </div>
    </section>
+
+
+
    <section class="dream-cell">
        <div class="half-width">
            <img src="img/pro2.png" alt="">
@@ -33,6 +36,22 @@
           <h3>Become a web developer</h3>
           <p>These seven simple words - dream big, work hard, make it happen - have been at the forefront of my mind this week. I don't know whether it's because of the sentiment of a brand new year, but I've been feeling super motivated to dream a little bigger, work a little harder, and make things happen this year</p>
           <a href="" class="resume" target="_blank">Download Resume</a>
+       </div>
+   </section>
+ <h1>Experience</h1>
+
+
+   <section class="experience">
+       <div class="half-width singel-exp">
+        <h2>Full stack web developer</h2>
+        <h4>2022-present|pro level developer</h5>
+        <p>I am a master of html css js and all the tools to make website.I know every thing. now it is my profession.day bay day I'm improveing myself. 24 7 I'm just working try soo hard make more website .</p>
+       </div>
+       <div class="half-width singel-exp">
+        <h2>Baby web developer</h2>
+        <h4>2020-21|programming hero</h6>
+        <p>
+            Programming Hero is a mobile-based app that helps you to learn Programming in a fun and interactive way. We started our journey back in 2018 in order to spread learning programming for free among everyone and also to break the barrier of learning using mobile.</p>
        </div>
    </section>
 </body>
