--- a/index.html
+++ b/index.html
@@ -54,5 +54,8 @@
             Programming Hero is a mobile-based app that helps you to learn Programming in a fun and interactive way. We started our journey back in 2018 in order to spread learning programming for free among everyone and also to break the barrier of learning using mobile.</p>
        </div>
    </section>
+   <footer>
+       <p>Copyright © 2021 Mostofa Kamal</p>
+   </footer>
 </body>
 </html>
