--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
        <div class="half-width singel-exp">
         <h2>Full stack web developer</h2>
         <h4>2022-present|pro level developer</h5>
-        <p>I am a master of html css js and all the tools to make website.I know every thing. now it is my profession.day bay day I'm improveing myself. 24 7 I'm just working try soo hard make more website .</p>
+        <p>I am a master of html css js and all the tools to make website.I know every thing. now it is my profession.day by day I'm improving myself. 24 7 I'm just working try soo hard make more website .</p>
        </div>
        <div class="half-width singel-exp">
         <h2>Baby web developer</h2>
